Fix minor room settings issues on narrow screens

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -9,6 +9,7 @@
   justify-content:center;
   z-index:20;
   overflow-y:auto;
+  overflow-x:hidden;
 }
 
 #modal-background {
